--- a/api-reference/mocking-api/mock-behavior-control.mdx
+++ b/api-reference/mocking-api/mock-behavior-control.mdx
@@ -1,309 +1,237 @@
 ---
-title: "Mock Behavior and Strictness Policies"
-description: "APIs and macros to configure mock objects' behavior regarding unexpected or uninteresting calls. Explains NiceMock, StrictMock, and NaggyMock policies, and how to enforce or relax strictness in large codebases."
+title: "Controlling Mock Behavior"
+description: "Describes strategies for handling uninteresting calls through NiceMock, NaggyMock, and StrictMock. Guides users in selecting the proper strictness for mock usage and adjusting diagnostics for test needs."
 ---
 
-# Mock Behavior and Strictness Policies
+# Controlling Mock Behavior
 
-This page details the APIs and macros provided by GoogleTest's GoogleMock framework to configure the behavior of mock objects around unexpected and uninteresting calls. It explains the different mock strictness policies — NiceMock, NaggyMock, and StrictMock — and guides you on controlling mock call tolerance in your tests.
-
----
-
-## 1. Overview of Mock Call Behavior
-
-In interaction-based testing with GoogleMock, your test sets *expectations* on mock methods via `EXPECT_CALL`. Calls matching these expectations proceed normally, and violations are flagged. However, calls that do not correspond to any expectation fall into two categories:
-
-- **Uninteresting Calls**: Methods called without any expectation set.
-- **Unexpected Calls**: Calls that do not match any declared expectation.
-
-By default, uninteresting calls emit warnings, while unexpected calls always cause test failures. To control this behavior in your test suite, GoogleMock provides strictness policies implemented through specialized mock wrappers.
+GoogleMock provides flexible control over mock objects' behaviors, especially when dealing with calls to mock methods that your tests might not explicitly care about — known as *uninteresting calls*. This page guides you through strategies to handle these calls gracefully using `NiceMock`, `NaggyMock`, and `StrictMock` wrappers, and helps you select the proper strictness to keep your tests clear, effective, and maintainable.
 
 ---
 
-## 2. Mock Strictness Policies
+## Understanding Uninteresting Calls
 
-GoogleMock provides three standard mock wrappers that control how the mock treats uninteresting calls:
+An **uninteresting call** is a call to a mock method for which no explicit `EXPECT_CALL` expectation has been set. By default, GoogleMock treats such calls as allowed but prints a **warning**, alerting you that the test did not anticipate or explicitly expect this call.
 
-### 2.1 NiceMock
+Uninteresting calls differ from **unexpected calls**, which violate defined expectations (e.g., calls that do not match any `EXPECT_CALL`), causing test failures.
 
-`NiceMock<T>` suppresses warnings for calls to mocked methods that have no explicit expectations set. It is useful when you want to ignore uninteresting calls and keep your test output clean.
+
+<Check>
+**Tip:** Prefer to treat uninteresting calls deliberately, balancing noise reduction and test strictness based on your context.
+</Check>
+
+---
+
+## Mock Wrappers: NiceMock, NaggyMock, and StrictMock
+
+GoogleMock offers three wrapper templates to tailor behavior regarding uninteresting calls:
+
+### 1. `NaggyMock<T>`
+
+- **Default behavior**.
+- Emits warnings whenever an uninteresting call occurs.
+- Allows tests to proceed without failure.
+
+### 2. `NiceMock<T>`
+
+- Suppresses warnings on uninteresting calls.
+- Useful when you expect many calls you don’t explicitly want to verify.
+- Suitable for reducing noise in tests focusing on specific interactions.
+
+### 3. `StrictMock<T>`
+
+- Treats uninteresting calls as *test failures*.
+- Enforces strict verification — any unexpected call signals an error immediately.
+- Ideal for tests that require exact call validation.
+
+### Usage
+
+Wrap your mock class type inside these templates to adjust strictness:
+
+```cpp
+using ::testing::NiceMock;
+using ::testing::NaggyMock;
+using ::testing::StrictMock;
+
+// Default (naggy) mock:
+MockFoo mock1;
+
+// Silence warnings for uninteresting calls:
+NiceMock<MockFoo> mock2;
+
+// Fail on any uninteresting calls:
+StrictMock<MockFoo> mock3;
+```
+
+These wrappers inherit from the mock class, so you can use them seamlessly wherever the original mock is accepted.
+
+
+<Note>
+`NiceMock` and `StrictMock` only affect *uninteresting* calls. They do not influence *unexpected* calls (calls that violate expectations) — which always cause failures.
+</Note>
+
+---
+
+## Choosing the Right Strictness Level
+
+Selecting how strict your mocks should be depends on your testing goals:
+
+- **Use `NiceMock`** when:
+  - You want to suppress irrelevant warnings.
+  - You only care about a few specific interactions.
+  - You want cleaner test output and reduced flakiness.
+
+- **Use `NaggyMock` (default)** when:
+  - You want to be informed of calls your tests do not explicitly expect.
+  - You are developing or debugging tests.
+
+- **Use `StrictMock`** when:
+  - It's critical to catch any unexpected calls.
+  - You want maximum enforcement of call expectations.
+  - Testing code with strict interface contracts.
+
+<Warning>
+Be cautious: strict mocks can make tests brittle and harder to maintain, especially when implementation details evolve.
+</Warning>
+
+---
+
+## Controlling Diagnostic Verbosity
+
+GoogleMock supports runtime control over the verbosity of diagnostic output related to mock calls via the `--gmock_verbose` flag or programmatically:
+
+- **Levels:** `info`, `warning` (default), and `error`.
+
+- **Effects:**
+  - `info`: Prints detailed info for all calls, including stack traces.
+  - `warning`: Prints warnings for uninteresting calls without stack traces.
+  - `error`: Prints only errors, suppressing info and warnings.
+
+Example:
+
+```bash
+test_binary --gmock_verbose=info
+```
+
+You can also set this flag inside tests:
+
+```cpp
+::testing::FLAGS_gmock_verbose = "error";
+```
+
+---
+
+## Practical Examples
+
+### Suppressing Uninteresting Call Warnings
 
 ```cpp
 using ::testing::NiceMock;
 
-NiceMock<MockFoo> mock_foo;
-EXPECT_CALL(mock_foo, Foo());
-... use mock_foo ...
+NiceMock<MockFoo> mock;
+EXPECT_CALL(mock, DoSomething());
+
+// Calls to other methods produce no warnings.
+mock.UnexpectedMethod();  // No warning printed.
 ```
 
-**Key points:**
+### Enforcing Strict Call Verification
 
-- Ignores warnings on uninteresting calls.
-- Applicable only for mock methods defined *directly* with `MOCK_METHOD` in the mock class.
-- Works as a subclass of the original mock and forwards constructors accordingly.
+```cpp
+using ::testing::StrictMock;
 
-### 2.2 NaggyMock
+StrictMock<MockFoo> mock;
+EXPECT_CALL(mock, DoSomething());
 
-`NaggyMock<T>` represents the default GoogleMock behavior: warnings are generated for uninteresting calls.
+mock.DoSomething();  // Passes
+mock.UnexpectedMethod();  // Test fails immediately
+```
+
+### Default Behavior with NaggyMock (the default behavior)
 
 ```cpp
 using ::testing::NaggyMock;
 
-NaggyMock<MockFoo> mock_foo;
-EXPECT_CALL(mock_foo, Foo());
-... use mock_foo ...
+NaggyMock<MockFoo> mock;
+EXPECT_CALL(mock, DoSomething());
+
+mock.DoSomething();                // Passes
+mock.UnexpectedMethod();          // Warning printed but test continues
 ```
-
-### 2.3 StrictMock
-
-`StrictMock<T>` treats uninteresting calls as **test failures**, immediately flagging any call that was not explicitly expected.
-
-```cpp
-using ::testing::StrictMock;
-
-StrictMock<MockFoo> mock_foo;
-EXPECT_CALL(mock_foo, Foo());
-... use mock_foo ...
-```
-
-**Important:** Strict mode is most useful when you want to enforce tight control over all mock interactions.
 
 ---
 
-## 3. Using `EXPECT_CALL` and `ON_CALL` to Set Expectations and Default Behavior
+## Suppressing or Allowing Uninteresting Calls on Specific Methods
 
-### 3.1 `EXPECT_CALL`
-
-- Declares an *expectation* that a mock method will be called.
-- Supports chaining clauses to specify: argument matchers, call cardinalities, call ordering, actions, and retirement.
-
-Example:
+To suppress warnings on specific uninteresting methods without changing the mock wrapper, add:
 
 ```cpp
-EXPECT_CALL(mock_foo, Bar(5))
-    .Times(3)
-    .WillOnce(Return(true))
-    .WillRepeatedly(Return(false));
+EXPECT_CALL(mock, SomeMethod(_)).Times(testing::AnyNumber());
 ```
 
-This expects `mock_foo.Bar(5)` to be called three times, returning `true` once and `false` subsequently.
-
-### 3.2 `ON_CALL`
-
-- Specifies the *default behavior* of a mock method when called with matching arguments.
-- Does **not** set an expectation that the call must occur.
-
-Example:
-
-```cpp
-ON_CALL(mock_foo, Foo(_))
-    .WillByDefault(Return(42));
-```
-
-Here, calls to `Foo` with any argument return 42 unless overridden by an `EXPECT_CALL`.
+This creates a catch-all expectation for `SomeMethod` that disables warnings for calls to it.
 
 ---
 
-## 4. Managing Call Cardinalities
+## Managing Mock Behavior Transitions
 
-`EXPECT_CALL` supports the `.Times()` clause specifying how many times a mock method call is expected:
-
-| Cardinality         | Meaning                                      |
-|---------------------|----------------------------------------------|
-| `AnyNumber()`       | Call can happen any number of times.
-| `AtLeast(n)`        | Call expected at least n times.
-| `AtMost(n)`         | Call expected at most n times.
-| `Between(m, n)`     | Call expected between m and n times.
-| `Exactly(n)` or `n` | Call expected exactly n times.
-
-If `.Times()` is omitted, GoogleMock infers call counts based on specified actions (`WillOnce` and `WillRepeatedly`).
-
----
-
-## 5. Enforcing Call Ordering
-
-GoogleMock allows you to specify order constraints on mock expectations:
-
-- **Sequences with `InSequence`**
-
-  Use the `InSequence` helper to group multiple expectations that must be called in order.
+When you want expectations to retire after saturation, use `.RetiresOnSaturation()`:
 
 ```cpp
-{
-  InSequence seq;
-  EXPECT_CALL(mock_foo, Init());
-  EXPECT_CALL(mock_foo, Run());
-}
-```
-
-- **Partial Ordering with `After` and `Sequence`**
-
-  Use the `.After()` clause and `Sequence` objects to define more flexible partial orders.
-
-Example:
-
-```cpp
-Sequence s1, s2;
-EXPECT_CALL(mock, First()).InSequence(s1);
-EXPECT_CALL(mock, Second()).InSequence(s1, s2);
-EXPECT_CALL(mock, Third()).InSequence(s2);
-```
-
-This enforces that `First` occurs before `Second`, and `Second` before `Third`.
-
----
-
-## 6. Controlling Expectation Retirement
-
-By default, expectations remain active (or "sticky") until the test ends, unless the mock object or test ends.
-
-The `.RetiresOnSaturation()` clause instructs GoogleMock to retire the expectation (making it inactive) once the expected number of invocations is reached. This is useful to avoid unexpected call errors when multiple expectations overlap.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, SetValue(_))
+EXPECT_CALL(mock, Foo(42))
     .Times(2)
     .RetiresOnSaturation();
 ```
 
----
-
-## 7. Understanding Uninteresting vs Unexpected Calls
-
-| Call Type         | Description                                                  | Outcome                     |
-|-------------------|--------------------------------------------------------------|-----------------------------|
-| Uninteresting Call | Call with no matching EXPECT_CALL set.                       | Warning (naggy), ignored in NiceMock, failure in StrictMock.
-| Unexpected Call    | Call does not match any EXPECT_CALL criteria but expectations exist on the method. | Test failure (always).
-
-**Recommended usage:**
-
-- Use `ON_CALL` to set default behavior without requiring calls.
-- Use `EXPECT_CALL` to require that calls must occur and to verify interaction.
-- Use `NiceMock` to suppress warnings about unimportant interactions.
-- Use `StrictMock` to ensure no unexpected interactions occur.
+This means after two calls with the argument `42`, the expectation is no longer active, allowing other expectations to match subsequent calls.
 
 ---
 
-## 8. API Reference Summary
+## Troubleshooting Common Scenarios
 
-### MOCK_METHOD
+<Accordion title="Uninteresting Calls Still Print Warnings With NiceMock">
+If you see warnings despite using `NiceMock`, make sure all mock methods are defined using the `MOCK_METHOD` macro directly in the mocked class (not inherited).
 
-Defines a mock method in a mock class.
+Also, check if the mock class has a virtual destructor, as `NiceMock` may misbehave otherwise.
+</Accordion>
 
-```cpp
-MOCK_METHOD(return_type, method_name, (args...), (qualifiers...));
-```
+<Accordion title="Unexpected Calls on StrictMock Failures">
+Unexpected calls always cause test failures regardless of wrapper. Review your expectations and argument matchers to ensure they cover all allowed calls.
+</Accordion>
 
-**Qualifiers include:**
-
-- `const` - for mocking const methods
-- `override` - recommended when overriding virtual methods
-- `noexcept` - for noexcept methods
-- `Calltype(X)` - for specifying calling conventions
-- `ref(&)` or `ref(&&)` - reference qualifiers
-
-### EXPECT_CALL
-
-Sets an expectation on a mock method and configures behavior with chainable clauses:
-
-```cpp
-EXPECT_CALL(mock_object, method_name(matchers...))
-    .With(multi_argument_matcher)  // optional
-    .Times(cardinality)            // optional
-    .InSequence(sequences...)      // optional
-    .After(expectations...)        // optional
-    .WillOnce(action)              // optional
-    .WillRepeatedly(action)        // optional
-    .RetiresOnSaturation();        // optional
-```
-
-- Call order for clauses must follow the above sequence.
-
-### ON_CALL
-
-Sets default action on matching calls without setting an expectation:
-
-```cpp
-ON_CALL(mock_object, method_name(matchers...))
-    .With(multi_argument_matcher)  // optional
-    .WillByDefault(action);        // required
-```
+<Accordion title="Reducing Verbosity in Noisy Tests">
+Adjust `--gmock_verbose=error` or set verbosity inside tests to reduce the volume of messages you receive.
+</Accordion>
 
 ---
 
-## 9. Common Pitfalls and Best Practices
+## Summary
 
-- Always set expectations (`EXPECT_CALL`) before exercising code that calls mocks.
-- Use `NiceMock` for tests that don't care about uninteresting calls to reduce noise.
-- Use `StrictMock` when you want uninteresting calls to cause test failures.
-- Use `.RetiresOnSaturation()` on expectations with limited call counts to avoid sticky expectations causing failures.
-- Beware that the order of `EXPECT_CALL`s impacts which expectation matches a call (last matching expectation is chosen).
-- When mocking overloaded methods, always specify argument matchers to disambiguate.
-- Prefer setting default behavior with `ON_CALL` rather than relying on default return values, to avoid unexpected results.
+Controlling mock behavior using `NiceMock`, `NaggyMock`, and `StrictMock` is essential to managing test noise and correctness.
 
----
+- Use **`NiceMock`** for quiet tests when uninteresting call warnings are unhelpful.
+- Use **`NaggyMock`** (default) to receive warnings for uninteresting calls.
+- Use **`StrictMock`** to enforce maximum strictness, turning uninteresting calls into errors.
 
-## 10. Example Usage
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::Return;
-using ::testing::NiceMock;
-using ::testing::StrictMock;
-using ::testing::_; // wildcard matcher
-
-class MockFoo {
- public:
-  MOCK_METHOD(int, DoSomething, (int x), ());
-};
-
-TEST(MockBehaviorTest, UsingStrictAndNice) {
-  {
-    StrictMock<MockFoo> strict_mock;
-    EXPECT_CALL(strict_mock, DoSomething(5))
-        .Times(1)
-        .WillOnce(Return(42));
-    EXPECT_ANY_THROW(strict_mock.DoSomething(10)); // unexpected call fails
-  }
-
-  {
-    NiceMock<MockFoo> nice_mock;
-    EXPECT_CALL(nice_mock, DoSomething(5))
-        .Times(1)
-        .WillOnce(Return(42));
-    int val = nice_mock.DoSomething(10);  // no warning or failure
-    (void)val;
-  }
-}
-```
+Adjust verbose diagnostics with the `--gmock_verbose` flag to match your debugging needs.
 
 ---
 
-## 11. Troubleshooting
+## See Also
 
-- **Uninteresting call warnings:** Use `NiceMock` to suppress or add a catch-all EXPECT_CALL with `Times(AnyNumber())`.
-- **Unexpected call errors:** Ensure your expectations cover all expected call patterns or add explicit disallowance with `Times(0)`.
-- **Action run out warnings:** When using multiple `WillOnce()`, ensure `.Times()` matches or use `WillRepeatedly()`.
-- **Order violations:** Use `InSequence` or `After` clauses to enforce call order.
-- **Mock leaks:** If a mock object's expectations are not verified due to object leaks, use `Mock::AllowLeak` or ensure proper cleanup.
-
----
-
-## 12. Further Reading and References
-
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [Mocking Reference (this page)](https://google.github.io/googletest/reference/mocking.html)
-- [Matchers Reference](reference/matchers.md)
-- [Actions Reference](reference/actions.md)
-- [Guides on Mock Strictness and Lifecycle](guides/mocking-patterns/mock-strictness-lifecycle.md)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [Basic Mocking with GoogleMock](../getting-started/configuration-and-first-use/using-googlemock-basics)
+- [Setting Expectations and Actions](./expectations-actions)
+- [Mocking Methods and Classes](./mock-methods)
+- [gMock Cookbook](../guides/advanced-usage-and-integration/advanced-mocking)
+- [Understanding Uninteresting vs Unexpected Calls](../docs/gmock_cook_book.md#NiceStrictNaggy)
 
 ---
 
-<Callout>
-Use `EXPECT_CALL` to precisely define expected calls and behaviors, and `ON_CALL` to set default behaviors without enforcing calls.
-For flexible mock behavior across your codebase, combine `NiceMock`, `NaggyMock`, and `StrictMock` types strategically to balance warning noise and strictness.
-</Callout>
+## Further Tips
+
+- Avoid blindly adding `EXPECT_CALL(...).Times(AnyNumber())` just to suppress warnings globally — prefer scoped use of `NiceMock` where applicable.
+- Remember that strict mocks make tests more brittle; reserve them for critical interface verifications.
+- Use verbosity levels strategically during debugging to get tracing info only when needed.
+- Ensure your mock classes are correctly defined and destructors are virtual, for wrapper features to work reliably.
 
 ---
