--- a/concepts/core-architecture/system-overview.mdx
+++ b/concepts/core-architecture/system-overview.mdx
@@ -1,201 +1,267 @@
 ---
-title: "System Overview and Design Principles"
-description: "Gain an understanding of the system architecture, modular structure, and design rationale behind GoogleTest as an xUnit-inspired test framework. Learn how test discovery, registration, and execution are coordinated, and how composability and extensibility are embedded in the framework's design."
+title: "System Overview"
+description: "Presents the principal components of GoogleTest and GoogleMock, including how test cases are structured, how mocks are constructed, and the overarching flow of test execution. Provides the big picture for users, mapping major abstractions and how they interact."
 ---
 
-# System Overview and Design Principles
+# System Overview
 
-GoogleTest is a modern C++ testing framework built on the xUnit architecture, designed to streamline the process of writing, organizing, and running tests with a focus on reliability, extensibility, and user-friendly experiences. This guide provides a comprehensive understanding of GoogleTest's system architecture, modular structure, and the rationale behind its design decisions, helping you leverage its capabilities effectively.
-
----
-
-## 1. GoogleTest Architecture at a Glance
-
-At its core, GoogleTest organizes tests into hierarchies and executes them in a controlled, extensible manner. The system consists of several interconnected components that together manage test discovery, registration, execution, and reporting.
-
-### Key Components
-- **Test**: The base class representing an individual test case. Users define tests through macros like `TEST()` or `TEST_F()`, which internally create subclasses of `Test`.
-- **TestSuite**: A collection of related tests grouped by a common purpose or fixture. It manages test execution order and lifecycle hooks.
-- **TestInfo**: Holds metadata and runtime information about a single test, including its name, source location, parameters, and results.
-- **UnitTest**: The singleton controller managing all `TestSuite`s and orchestrating the overall test run.
-- **Environment**: Allows global setup and teardown outside individual tests or suites.
-- **TestEventListeners**: Provides an event listening interface allowing customized reactions to test events (start, end, failure, etc.).
-
-### Test Lifecycle and Flow
-- Tests register themselves automatically with the framework during static initialization.
-- The `RUN_ALL_TESTS()` function triggers execution, running global environments, then each test suite, and each test within the suite.
-- Results are collected as `TestResult` objects containing detailed part results, properties, and timing.
-- Event listeners receive updates during the entire test lifecycle for output, logging, or integrations.
-
-<Tip>
-GoogleTest manages test registration automatically, so you can focus directly on writing tests without manual enumeration.
-</Tip>
+GoogleTest and GoogleMock are the foundation of a powerful C++ testing framework that helps developers write unit tests with confidence. This page presents the principal components of both GoogleTest and GoogleMock, illustrating how test cases are structured, how mocks are constructed, and how the overall test execution flow is orchestrated. Understanding these core abstractions and their interactions provides the big picture necessary for writing effective and maintainable tests.
 
 ---
 
-## 2. Modular Structure and Composability
+## Test Cases and Test Suites
 
-GoogleTest’s design emphasizes clean modularity and composability, allowing users to extend or replace components as needed. The critical design choices supporting this include:
+At the heart of GoogleTest lies the concept of a **Test Case**, which groups together related test functions called **Tests**. Each test is a function that verifies a particular aspect of your code.
 
-### Automatic Registration
-- Tests and test suites self-register using static global objects.
-- `TestInfo` encapsulates information needed for registration and runtime.
+- **Test Suites** (previously called Test Cases in older versions) are collections of related tests, allowing logical grouping.
+- Tests are defined using macros like `TEST` and `TEST_F`, enabling structured organization and reuse of setup code.
 
-### Separation of Concerns
-- **Test logic** (test bodies) is isolated in subclasses of `Test`.
-- **Test management and execution** are handled by `TestSuite` and `UnitTest`.
-- **Event dispatching** is delegated to `TestEventListeners`, enabling multiple output or logging behaviors simultaneously.
+A typical flow when writing and running tests is:
 
-### Extensibility Points
-- Custom **test event listeners** can be added or default listeners replaced to provide alternate reporting or actions.
-- **Global environment** objects can be registered for setup/teardown tasks that span all tests.
-- Users can create **dynamic tests** using `RegisterTest()` to handle cases beyond macros.
+1. Define a test suite and one or more test cases.
+2. Write assertions within tests to verify expected behaviors.
+3. Compile and run all or selected tests.
 
-### Support for Parameterized and Typed Tests
-- GoogleTest supports value-parameterized tests (`TEST_P`) and type-parameterized tests (`TYPED_TEST`), expanding test coverage without code duplication.
-- These tests integrate into the core architecture as decorated test suites and test info objects.
+Example:
 
-<Note>
-Under the hood, GoogleTest uses templated base classes and interfaces like `WithParamInterface` to unify parameterized tests with regular tests, maintaining a consistent flow.
-</Note>
+```cpp
+TEST(MathTest, Addition) {
+  EXPECT_EQ(2 + 2, 4);
+}
+```
 
----
-
-## 3. Test Discovery and Execution Coordination
-
-GoogleTest handles test discovery and execution seamlessly through the interaction of its core components.
-
-### Test Registration Flow
-- When a test is defined with a macro (`TEST`, `TEST_F`, `TEST_P`), it creates a static `TestInfo` object.
-- This `TestInfo` immediately registers itself with the global `UnitTest` instance, which organizes tests into `TestSuite`s.
-
-### Filtering and Selection
-- Before execution, GoogleTest applies test filters (`--gtest_filter`) and other flags to determine which tests run.
-- It supports positive and negative pattern matching and can shard tests across multiple processes or machines.
-
-### Execution Order
-- GoogleTest runs tests in ascending source line order by default, ensuring deterministic results.
-- Death test suites (with names ending `DeathTest`) run before other suites to mitigate thread and process conflicts.
-
-### Running Tests
-- `UnitTest::Run()` performs the execution, calling global `Environment` setup,
-- Then iterating over registered `TestSuite`s, invoking their `Run()` methods.
-- Each `TestSuite` runs its individual tests, handling setup/teardown points and respecting skip or fail-fast flags.
-
-### Result Reporting
-- Each test produces a `TestResult` encapsulating the outcome, elapsed time, and any failures.
-- Registered event listeners receive callbacks signaling the progress, enabling customized logs, reports, or integration hooks.
-
-<Tip>
-By using `RUN_ALL_TESTS()`, you enable GoogleTest’s intelligent and efficient orchestration of test execution and reporting.
-</Tip>
-
----
-
-## 4. Design Rationale and Principles
-
-Understanding GoogleTest’s rationale helps you align your test development process with its strengths.
-
-### 4.1 Independent and Repeatable Tests
-- Tests create fresh fixture instances every run to avoid hidden dependencies.
-- Setup and teardown are run per test and test suite to isolate side effects.
-
-### 4.2 Organized Grouping
-- Related tests are grouped in `TestSuite`s, aiding maintenance and reporting.
-- Fixtures allow sharing of setup between closely related tests.
-
-### 4.3 Portability and Flexibility
-- Built to run consistently across Linux, Windows, and macOS.
-- Supports multiple compilers and configurations, including no-exceptions mode.
-
-### 4.4 Rich Diagnostic Information
-- Failures include source location, stack traces, and messages.
-- The trace stack (`SCOPED_TRACE`) enhances failure context.
-
-### 4.5 Ease of Use
-- Minimal boilerplate using concise macros simplifying test code.
-- Automatic detection of all tests removes the need for manual registration.
-
-### 4.6 Extensible Event-Driven Architecture
-- The event listener API empowers customization of output, test monitoring, and integration with external systems.
-- Default event listeners provide output to console and XML/JSON formats.
-
-<Warning>
-Avoid mixing test fixture types within the same suite, as GoogleTest enforces fixture consistency strictly to maintain predictable behavior.
-</Warning>
-
----
-
-## 5. User Workflow: From Writing to Running Tests
-
-1. **Define Tests:** Use `TEST()` or `TEST_F()` macros to author test cases.
-2. **Register Environment:** (Optional) Use `AddGlobalTestEnvironment()` for global setup.
-3. **Initialize:** Invoke `InitGoogleTest()` early, usually in your `main()`.
-4. **Run Tests:** Call `RUN_ALL_TESTS()` to execute tests.
-5. **Analyze Output:** Review console output or generated XML/JSON reports.
-
----
-
-## 6. Practical Tips and Best Practices
-
-- **Use Fixtures Wisely:** Prefer `TEST_F` when tests share common data.
-- **Leverage Parameterized Tests:** Use value- and type-parameterized tests to maximize coverage.
-- **Handle Failures Intelligently:** Use `EXPECT_*` for non-fatal and `ASSERT_*` for fatal assertions as per test flow needs.
-- **Skip Tests When Needed:** Use `GTEST_SKIP()` to conditionally skip tests at runtime.
-- **Use Event Listeners:** Customize outcomes or integrate with tools by attaching listeners.
-- **Manage Disabled Tests:** Use the `DISABLED_` prefix carefully to isolate flaky or incomplete tests.
-
-<Warning>
-Do not override internal GoogleTest methods like `TestBody()` unless you understand the internal workings thoroughly.
-</Warning>
-
----
-
-## 7. Common Troubleshooting Scenarios
-
-- **Tests Not Running:** Verify test filters and if tests were properly linked.
-- **Mismatched Fixtures:** Mixing `TEST()` and `TEST_F()` in the same suite causes failures.
-- **Repeatability Issues:** Ensure tests are side-effect free and independent.
-- **Output Format Issues:** Confirm proper flags are set for XML/JSON reporting.
+Here, `MathTest` is the test suite, and `Addition` is the test case verifying addition.
 
 <Check>
-For detailed troubleshooting, see the [Troubleshooting Common Setup Issues](/getting-started/troubleshooting/common-errors) and [Finding Further Help & Community Resources](/getting-started/troubleshooting/finding-support).
+Using `TEST_F` allows leveraging fixtures — shared setup and teardown code — across multiple tests in a suite.
 </Check>
 
----
+## Test Fixtures
 
-## 8. Visualization: GoogleTest Core Architecture
+**Test Fixtures** are classes that provide setup and teardown hooks around tests to eliminate redundant code.
+
+- Use `TEST_F` macro to write tests that leverage fixtures.
+- Fixtures define `SetUp()` and `TearDown()` methods called before and after each test.
+
+Example:
+
+```cpp
+class DatabaseTest : public ::testing::Test {
+ protected:
+  void SetUp() override {
+    // Initialize test database
+  }
+
+  void TearDown() override {
+    // Cleanup test database
+  }
+};
+
+TEST_F(DatabaseTest, Insert) {
+  // Test the insert function with the prepared database
+}
+```
+
+This pattern promotes reusable setup and keeps tests clean and focused.
+
+## Mock Objects and Mock Classes
+
+GoogleMock extends GoogleTest by allowing dependency mocking to isolate and verify interactions with dependencies in your tests.
+
+### Defining a Mock Class
+
+To mock an interface or abstract class, derive a mock class and declare mock methods using the `MOCK_METHOD` macro.
+
+A mock method has the signature:
+
+```cpp
+MOCK_METHOD(return_type, MethodName, (Args...), (qualifiers));
+```
+
+where `qualifiers` may include `const`, `override`, `noexcept`, and calling conventions.
+
+Example:
+
+```cpp
+class Foo {
+ public:
+  virtual ~Foo();
+  virtual int GetSize() const = 0;
+  virtual std::string Describe(const char* name) = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(std::string, Describe, (const char* name), (override));
+};
+```
+
+### Handling Overloaded and Template Methods
+
+- Overloaded methods can all be mocked with corresponding `MOCK_METHOD` declarations.
+- Class templates require mocking each template specialization.
+
+### Special Wrappers: NiceMock, NaggyMock, StrictMock
+
+To control how uninteresting calls (calls with no expectations) are treated, GoogleMock provides wrappers:
+
+- **NiceMock**: Suppresses warnings for uninteresting calls.
+- **NaggyMock**: The default behavior that warns on uninteresting calls.
+- **StrictMock**: Treats uninteresting calls as errors.
+
+Example of usage:
+
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockFoo> nice_foo;
+EXPECT_CALL(nice_foo, GetSize());
+```
+
+<Note>
+Use these wrappers to tune test strictness and maintainability.
+</Note>
+
+### Setting Expectations and Behaviors
+
+The core mechanism in GoogleMock is setting expectations on mock methods.
+
+- Use `EXPECT_CALL(mock_object, Method(matchers))` to specify how the mock should be called.
+- Apply modifiers to control call count (`Times`), call order (`InSequence`), and call behavior (`WillOnce`, `WillRepeatedly`).
+
+Example:
+
+```cpp
+EXPECT_CALL(mock_foo, Describe(::testing::Eq("test")))
+    .Times(2)
+    .WillOnce(::testing::Return("first result"))
+    .WillRepeatedly(::testing::Return("subsequent result"));
+```
+
+### Default Actions
+
+- Use `ON_CALL` to specify default behavior without necessarily expecting the call.
+- If no actions or expectations are specified, GoogleMock uses default actions appropriate for the return type.
+
+## Test Execution Flow
+
+Understanding how tests run clarifies how expectations are enacted.
+
+1. **Test runner** discovers and filters tests.
+2. Each test is run from `SetUp()` through the test body to `TearDown()`.
+3. During execution, mock methods are invoked according to the expectations.
+4. On destruction of mocks, GoogleMock verifies that all expectations were satisfied and reports failures otherwise.
+
+<Steps>
+<Step title="Initialize Test Environment">
+The test runner processes command-line args and initializes GoogleTest and GoogleMock.
+</Step>
+<Step title="Run Each Test Suite">
+For each test suite, each test executes setup, test code, and teardown in sequence.
+</Step>
+<Step title="Mock Interaction">
+Mocks accept calls; GoogleMock matches calls against expectations or default actions.
+</Step>
+<Step title="Verify Expectations">
+Upon mock destruction, GoogleMock verifies all expectations were met, failing the test if not.
+</Step>
+</Steps>
+
+## User Workflow Example
+
+Imagine you want to test a component that depends on a `Database` interface:
+
+1. Define a mock of the `Database` interface:
+
+```cpp
+class MockDatabase : public Database {
+ public:
+  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
+  MOCK_METHOD(int, Query, (const std::string& query_str), (override));
+};
+```
+
+2. Create a test fixture using the mock:
+
+```cpp
+class MyComponentTest : public ::testing::Test {
+ protected:
+  MockDatabase mock_db;
+  MyComponent component{&mock_db};
+};
+```
+
+3. Write a test case with expectations:
+
+```cpp
+TEST_F(MyComponentTest, ConnectsAndQueries) {
+  EXPECT_CALL(mock_db, Connect("mydb://url")).WillOnce(::testing::Return(true));
+  EXPECT_CALL(mock_db, Query("SELECT * FROM users")).WillOnce(::testing::Return(42));
+
+  bool connected = component.Initialize();
+  EXPECT_TRUE(connected);
+  int result = component.GetUserCount();
+  EXPECT_EQ(result, 42);
+}
+```
+
+This user journey demonstrates effective use of GoogleTest and GoogleMock components to precisely specify behavior and verify interactions.
+
+## Practical Tips and Best Practices
+
+- Always mock interfaces or abstract classes rather than concrete classes.
+- Prefer `NiceMock` for less brittle tests unless strict behavior verification is required.
+- Use sequences and ordering rules when call order matters.
+- Use `ON_CALL` to specify default behavior to avoid unexpected failures.
+- When mocking overloads or template methods, ensure all variants are covered or `using` declarations are included.
+- Carefully choose cardinalities with `Times` to avoid flaky tests.
+
+## Common Pitfalls
+
+- Forgetting to mark bases' destructors as `virtual` can cause resource leaks.
+- Setting expectations after exercising the mock leads to undefined behavior.
+- Over-specifying matchers and expectations makes tests brittle.
+- Not using `RetiresOnSaturation` when multiple expectations cover similar calls can cause expectation stickiness issues.
+
+## Related Concepts and Cross-References
+
+For deeper understanding, explore these related pages:
+
+- [Mocking Methods and Classes](/api-reference/mocking-api/mock-methods): Detailed guide on declaring and implementing mocks.
+- [Setting Expectations and Actions](/api-reference/mocking-api/expectations-actions): Comprehensive treatment of `EXPECT_CALL` and `ON_CALL` syntax and semantics.
+- [Controlling Mock Behavior](/api-reference/mocking-api/mock-behavior-control): Explains `NiceMock`, `NaggyMock`, and `StrictMock` wrappers.
+- [Test Structure and Lifecycle](/api-reference/core-api/test-structure): Insights into test fixtures, setup, and teardown.
+
+## Diagrammatic Overview
 
 ```mermaid
 flowchart TD
-  Start[Test Program Start] --> Init[InitGoogleTest()]
-  Init --> Register[Automatic Test Registration]
-  Register --> RunAll[RUN_ALL_TESTS()]
-  RunAll --> SetupEnvs[Global Environments SetUp()]
-  SetupEnvs --> TestSuites[Iterate Over TestSuites]
-  subgraph TestSuite Execution
-    direction TB
-    Tests[Iterate Over Tests In Suite] --> RunTest[Run Test]
-    RunTest --> Collect[Collect TestResult]
+  subgraph Tests
+    TestSuite1[Test Suite]
+    TestSuite1 --> Test1[Test 1]
+    TestSuite1 --> Test2[Test 2]
   end
-  TestSuites --> TearDownEnvs[Global Environments TearDown()]
-  TearDownEnvs --> Report[Reporting & Event Listeners]
-  Report --> Finish[Test Program End]
 
-  %% Styling for clarity
-  classDef component fill:#f9f,stroke:#333,stroke-width:2px;
-  class Start,Init,Register,RunAll,SetupEnvs,TestSuites,TearDownEnvs,Report,Finish component;
+  subgraph Mocks
+    MockClass[Mock Class] --> MockMethod1[Mock Method 1]
+    MockClass --> MockMethod2[Mock Method 2]
+  end
+
+  subgraph TestFlow
+    RunTests[Run Tests]
+    RunTests --> Setup[SetUp()]
+    Setup --> ExecuteTest[Test Execution]
+    ExecuteTest --> Teardown[TearDown()]
+    Teardown --> Verify[Verify Expectations]
+  end
+
+  Test1 -->|Uses| MockClass
+  Test2 -->|Uses| MockClass
+  Verify --> Reports[Reports Success/Failure]
 ```
 
----
-
-## 9. Additional Learning and Next Steps
-
-- Explore [Test Lifecycle and Execution Flow](/concepts/core-architecture/test-lifecycle) for a detailed sequence of test execution.
-- Learn about [Assertions, Matchers, and Verification Mechanisms](/concepts/core-architecture/assertions-matchers) to write powerful verifications.
-- Understand [Mocking Fundamentals](/concepts/mocking-and-test-abstraction/mocking-principles) to test dependencies effectively.
-- Integrate GoogleTest with build systems and CI from the [Integration with Development Pipelines](/overview/integration-and-ecosystem/integration-overview).
+This flowchart highlights the relationship between test suites, individual tests, mock classes and methods, and the lifecycle of test execution with verification.
 
 ---
 
-This chapter laid the groundwork for understanding how GoogleTest works under the hood, empowering you to write clean, reliable tests and customize the test framework to your needs.
+For detailed step-by-step examples and advanced usage, consult the guides on mocking and test writing cited throughout this documentation.
